tup/parse/testdata/error/output/type_declarations.tup
# missing type body
expecting "tuple type", got "" at row 1, col 13

# unclosed tuple type
expecting "field name", got "" at row 1, col 24

# type keyword not followed by tuple body
expecting "tuple type", got "Circle" at row 1, col 14

# union type missing variant after pipe
expecting "union member", got "" at row 1, col 28

# tuple type mixed labeled and unlabeled members
expecting "field name", got "Int" at row 1, col 29
